Added test to ensure the database manager parses dsn strings correctly.

--- a/src/anh/CMakeLists.txt
+++ b/src/anh/CMakeLists.txt
@@ -2,5 +2,7 @@ include(MMOServerLibrary)
 
 AddMMOServerLibrary(libanh
     ADDITIONAL_SOURCE_DIRS
+        database
+        database/mysql
         event_dispatcher
 )
