--- a/src/anh/CMakeLists.txt
+++ b/src/anh/CMakeLists.txt
@@ -5,4 +5,13 @@ AddMMOServerLibrary(libanh
         database
         database/mysql
         event_dispatcher
+    ADDITIONAL_INCLUDE_DIRS
+        ${MYSQL_INCLUDE_DIR}
+        ${MysqlConnectorCpp_INCLUDES}
+    DEBUG_LIBRARIES
+        ${MYSQL_LIB}
+        ${MysqlConnectorCpp_LIBRARY_DEBUG}
+    OPTIMIZED_LIBRARIES
+        ${MYSQL_LIB}
+        ${MysqlConnectorCpp_LIBRARY_RELEASE}
 )
