Added server_directory to the libanh project with an initial source and test file.

--- a/src/anh/CMakeLists.txt
+++ b/src/anh/CMakeLists.txt
@@ -3,8 +3,8 @@ include(MMOServerLibrary)
 AddMMOServerLibrary(libanh
     ADDITIONAL_SOURCE_DIRS
         database
-        database/mysql
         event_dispatcher
+        server_directory
     ADDITIONAL_INCLUDE_DIRS
         ${MYSQL_INCLUDE_DIR}
         ${MysqlConnectorCpp_INCLUDES}
