GMock is now a required dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,6 +121,8 @@ IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/deps")
     
     SET(GTEST_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/${__deps_dir}/gtest")
     
+    SET(GMOCK_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/${__deps_dir}/gmock")
+    
     SET(LUA_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/${__deps_dir}/lua")
     
     SET(ENV{MYSQL_DIR} "${CMAKE_CURRENT_SOURCE_DIR}/${__deps_dir}/mysql-connector-c")
@@ -140,6 +142,7 @@ FIND_PACKAGE(Boost 1.44.0 COMPONENTS date_time regex thread system program_optio
 FIND_PACKAGE(GLM REQUIRED)
 FIND_PACKAGE(GLog REQUIRED)
 FIND_PACKAGE(GTest REQUIRED)
+FIND_PACKAGE(GMock REQUIRED)
 FIND_PACKAGE(Lua REQUIRED)
 FIND_PACKAGE(MySQL REQUIRED)
 FIND_PACKAGE(MysqlConnectorCpp REQUIRED)
