LoginServer now initializes the database manager and server directory on startup

--- a/data/config/general.cfg
+++ b/data/config/general.cfg
@@ -5,6 +5,9 @@ BindAddress=127.0.0.1
 ServiceMessageHeap=16384
 GlobalMessageHeap=16384
 
+# Cluster Configuration
+cluster_name = naritus
+
 # Database Configuration
 DBServer = localhost
 DBPort = 3306
