converted PingServer(deprecated) over to BaseApplication, moved instantiation of server directory and db manager over to BaseApplication so children won't need to worry about creating those objects.

--- a/data/config/PingServer.cfg
+++ b/data/config/PingServer.cfg
@@ -3,3 +3,10 @@
 # Networking Configuration
 #BindAddress=127.0.0.1
 BindPort=44992
+
+# cluster info
+cluster.name=naritus
+cluster.process_type=ping_service
+cluster.version=0.1.0
+cluster.address=127.0.0.1
+cluster.tcp_port=44992
