Added a login server project and an initial test to verify LoginServer subscribes to listen for LoginClientIdEvent's

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,8 @@ add_subdirectory(anh)
 
 # executables
 
+add_subdirectory(login)
+
 if (NOT DISABLE_LEGACY)
     ADD_SUBDIRECTORY(Utils)
     ADD_SUBDIRECTORY(Common)
